attempts at debugging

--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
           <p>Lat: <span id="lat"></p>
           <p>Long: <span id="lng"></p>
         </fieldset>
-        <div id="bip"></bip>
+        <div id="bip"></div>
         <div id="msg"></div>
       </div>
     </div>
