--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,8 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
   <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-  <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+  <!-- meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" / -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline' 'self' *.openstreetmap.org  filesystem:">
   <!-- Good default declaration:
     * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
     * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
@@ -58,6 +59,7 @@
           <p>Long: <span id="lng"></p>
         </fieldset>
         <div id="bip"></div>
+        <input type="checkbox" id="online" />On-line
         <div id="msg"></div>
       </div>
     </div>
@@ -66,6 +68,7 @@
   <script src="lib/jquery/jquery.min.js"></script>
   <!--script src="bootstrap/js/bootstrap.js"></script-->
   <script src="lib/leaflet/leaflet-src.js"></script>
+  <script src="lib/leaflet-tilelayer-cordova.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript">
     app.initialize();
