improved offline handling

--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,8 @@
           <p>Long: <span id="lng"></p>
         </fieldset>
         <div id="bip"></div>
-        <input type="checkbox" id="online" />On-line
+        <div id="onlineStatus">Online</div>
+        <button class="btn" id="forceOffline">Force Offline</button>
         <div id="msg"></div>
       </div>
     </div>
