--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,9 @@
         <div id="bip"></div>
         <div id="onlineStatus">Online</div>
         <button class="btn" id="forceOffline">Force Offline</button>
-        <div id="msg"></div>
+        <button class="btn" id="clearCache">Clear cache</button>
+
+        <pre id="msg"></pre>
       </div>
     </div>
   </div>
@@ -71,9 +73,6 @@
   <script src="lib/leaflet/leaflet-src.js"></script>
   <script src="lib/leaflet-tilelayer-cordova.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
-  <script type="text/javascript">
-    app.initialize();
-  </script>
 </body>
 
 </html>
