--- a/www/index.html
+++ b/www/index.html
@@ -68,10 +68,12 @@
     </div>
   </div>
   <script type="text/javascript" src="cordova.js"></script>
+  <script src="lib/es6-promise.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <!--script src="bootstrap/js/bootstrap.js"></script-->
   <script src="lib/leaflet/leaflet-src.js"></script>
   <script src="lib/leaflet-tilelayer-cordova.js"></script>
+  <script src="lib/leaflet.functionaltilelayer.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </body>
 
