--- a/www/index.html
+++ b/www/index.html
@@ -72,9 +72,8 @@
   <script src="lib/jquery/jquery.min.js"></script>
   <!--script src="bootstrap/js/bootstrap.js"></script-->
   <script src="lib/leaflet/leaflet-src.js"></script>
-  <script src="lib/leaflet-tilelayer-cordova.js"></script>
   <script src="lib/leaflet.functionaltilelayer.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 
 </html>
