--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css" type="text/css">
   <link rel="stylesheet" href="lib/leaflet/leaflet.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
   <title>Where am I</title>
 </head>
 
@@ -60,7 +61,6 @@
         </fieldset>
         <div id="bip"></div>
         <div id="onlineStatus">Online</div>
-        <button class="btn" id="forceOffline">Force Offline</button>
         <button class="btn" id="clearCache">Clear cache</button>
 
         <pre id="msg"></pre>
@@ -71,7 +71,7 @@
   <script src="lib/es6-promise.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <!--script src="bootstrap/js/bootstrap.js"></script-->
-  <script src="lib/leaflet/leaflet-src.js"></script>
+  <script src="lib/leaflet/leaflet.js"></script>
   <script src="lib/leaflet.functionaltilelayer.js"></script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
