Added sliding menu

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css" type="text/css">
   <link rel="stylesheet" href="lib/leaflet/leaflet.css" type="text/css">
+  <link rel="stylesheet" href="lib/slideMenu/L.Control.SlideMenu.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <title>Where am I</title>
 </head>
@@ -73,6 +74,7 @@
   <!--script src="bootstrap/js/bootstrap.js"></script-->
   <script src="lib/leaflet/leaflet.js"></script>
   <script src="lib/leaflet.functionaltilelayer.js"></script>
+  <script src="lib/slideMenu/L.Control.SlideMenu.js"></script>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 
