test to play audio

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,7 @@
         <button class="btn" id="clearCache">Clear cache</button>
 
         <pre id="msg"></pre>
+        <audio src="05 - Ilia's Theme.mp3" autoplay="true" controls="true" />
       </div>
     </div>
   </div>
