--- a/www/index.html
+++ b/www/index.html
@@ -65,10 +65,11 @@
         <button class="btn" id="clearCache">Clear cache</button>
 
         <pre id="msg"></pre>
-        <audio src="05 - Ilia's Theme.mp3" autoplay="true" controls="true" />
+
       </div>
     </div>
   </div>
+  <audio src="05 - Ilia's Theme.mp3" autoplay controls volume="1" ></audio>
   <script type="text/javascript" src="cordova.js"></script>
   <script src="lib/es6-promise.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
